--- a/src/components/code/code-c/pages/elem-cinstall.html
+++ b/src/components/code/code-c/pages/elem-cinstall.html
@@ -7,18 +7,19 @@
 
   <ol>
     <li><a href="#wsl">Командная строка wsl</a></li>
-    <li><a href="#compiler">Компиляторы</a></li>
+    <li><a href="#compiler">Компиляторы gcc и clang</a></li>
     <ol>
-      <li><a href="#gcc">Компилятор gcc</a></li>
-      <li><a href="#clang">Компилятор clang</a></li>
-      <li><a href="#compiler1">Настройка компилятора gcc и clang</a></li>
+      <li><a href="#gcc">Установка gcc</a></li>
+      <li><a href="#clang">Установка clang</a></li>
+      <li><a href="#compiler1">Настройка gcc и clang</a></li>
+      <li><a href="#compiler2">Первая программа</a></li>
+      <li><a href="#compiler3">Компиляция</a></li>
     </ol>
     <li><a href="#editor">Текстовые редакторы</a></li>
     <ol>
       <li><a href="#vim">Vim</a></li>
       <li><a href="#notepad">Notepad++</a></li>
       <li><a href="#vscode">VSCode</a></li>
-      <li><a href="#editor1">Первая программа</a></li>
     </ol>
     <li><a href="#ide">IDE</a></li>
     <li><a href="#codeblocks">CodeBlocks</a></li>
@@ -57,17 +58,12 @@
 </article>
 
 
-<!-- Компиляторы -->
+<!-- Компиляторы gcc и clang -->
 <article class="article">
   <div class="anchor" id="compiler"></div>
-  <h3>Компиляторы</h3>
-</article>
+  <h3>Компиляторы gcc и clang</h3>
 
-
-<!-- Компилятор gcc-->
-<article class="article">
-  <div class="anchor" id="gcc"></div>
-  <h2>Компилятор gcc от проекта GNU</h2>
+  <h3>Компилятор gcc от проекта GNU</h3>
 
   <p>Проверим что установлен компилятор gcc</p>
   <code>gcc -v</code>
@@ -80,6 +76,27 @@
     <li>g++ для языка С++</li>
   </ul>
   <p><a href="https://gcc.gnu.org/">https://gcc.gnu.org/</a></p>
+
+  <h3>Компилятор clang от проекта LLVM</h3>
+
+  <p>Проверим что установлен компилятор clang</p>
+  <code>clang -v</code>
+  <code>clang version 18.1.8</code>
+  <p>(сокращение от clang --version)</p>
+
+<p>Clang содержит компилятор</p>
+  <ul>
+    <li>clang для языка СИ</li>
+    <li>clang++ для языка С++</li>
+  </ul>
+  <p><a href="https://llvm.org/">https://llvm.org/</a></p>
+</article>
+
+
+<!-- Установка gcc-->
+<article class="article">
+  <div class="anchor" id="gcc"></div>
+  <h3>Установка gcc</h3>
 
   <h3>Вариант 1. Если есть интернет</h3>
   <p>Воспользуемся пакетом средств для разработки MSYS2, который включает GCC</p>
@@ -151,24 +168,10 @@
 </article>
 
 
-<!-- Компилятор clang-->
+<!-- Установка clang-->
 <article class="article">
   <div class="anchor" id="clang"></div>
-  <h2>Компилятор clang от проекта LLVM</h2>
-
-  <p>Проверим что установлен компилятор clang</p>
-  <code>clang -v</code>
-  <code>clang version 18.1.8</code>
-  <p>(сокращение от clang --version)</p>
-
-<p>Clang содержит компилятор</p>
-  <ul>
-    <li>clang для языка СИ</li>
-    <li>clang++ для языка С++</li>
-  </ul>
-  <p><a href="https://llvm.org/">https://llvm.org/</a></p>
-
-  <h3>Установим компилятор clang</h3>
+  <h3>Установка clang</h3>
 
   <ol>
     <li>
@@ -199,25 +202,109 @@
   <div class="anchor" id="compiler1"></div>
   <h3>Настройка компилятора gcc и clang</h3>
 
-  <p>Можно совместить компиляцию и выполнение одной командой</p>
-  <code>gcc source.cpp && ./a</code>
+  <p>Посмотрим версию компилятора (сокращенно от --version)</p>
+  <code>gcc -v</code>
 
-  <p>Можно задать имя исполняемого файла после флага <strong>-o</strong></p>
-  <code>gcc source.cpp -o source</code>
+  <p>Посмотрим с какими опциями можно запустить компилятор</p>
+  <code>gcc --help</code>
 
-  <p>Для компиляции с предупреждениями применяется флаг <strong>-Wall</strong></p>
-  <code>gcc -Wall source.cpp</code>
+  <p>Совместим компиляцию и выполнение одной командой</p>
+  <code>gcc source.c && ./a</code>
 
-  <p>Можно задать компиляцию в определенный стандарт (c99, c11, c17, c23) после флага <strong>-std=</strong></p>
-  <code>gcc -std=c23 source.cpp</code>
+  <p>Зададим имя исполняемого файла после флага <strong>-o</strong></p>
+  <code>gcc source.c -o source</code>
+
+  <p>Покажем предупреждения если они есть</p>
+  <code>gcc -Wall source.c</code>
+
+  <p>Компилируем в определенный стандарт (c99, c11, c17, c23)</p>
+  <code>gcc -std=c23 source.c</code>
 
   <p>Чтобы гарантировать, что программа будет строго соответствовать определенному стандарту дополнительно используют флаг <strong>-pedantic</strong></p>
-  <code>gcc -std=c23 -Wall -pedantic source.cpp</code>
+  <code>gcc -std=c23 -Wall -pedantic source.c</code>
   <p>В этом случае компилятор будет генерировать предупреждения, если код не соответствует правилам стандарта</p>
 
-  <p>Можно в добавок создать файл с ассемблерным кодом применяя флаг <strong>-S</strong></p>
-  <code>gcc source.cpp -S</code>
-  <p>В этом случае дополнительно будет сгенерирован файл <strong>a.s</strong>  содержащий код на ассемблере с синтаксисом GAS (ассемблер от GNU)</p>
+  <p>Создадим в добавок файл a.s с ассемблерным кодом</p>
+  <code>gcc a.c -S</code>
+  <p>В этом случае дополнительно будет сгенерирован файл <strong>a.s</strong> содержащий код на ассемблере с синтаксисом GAS (ассемблер от GNU)</p>
+
+  <p>Флаг <strong>-save-temp</strong> оставит все созданные промежуточные файлы во время компиляции</p>
+  <code>gcc a.c -save-temp</code>
+</article>
+
+
+<!-- Первая программа -->
+<article class="article">
+  <div class="anchor" id="compiler2"></div>
+  <h3>Первая программа</h3>
+
+  <ol>
+
+    <li>
+      <p>Создадим файл</p>
+      <code>hello.c</code>
+    </li>
+
+    <li>
+      <p>Запишем в него код первой программы</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  printf("Hello, world!");
+
+  return 0;
+}
+</pre>
+    </li>
+
+    <li>
+      <p>Откроем терминал и запустим компилятор gcc</p>
+      <code>gcc hello.c</code>
+    </li>
+
+    <li>
+      <p>По умолчанию компилятор создаст исполняемый файл <strong>a.exe</strong>. Запустим его</p>
+      <code>./a</code>
+    </li>
+
+    <li>
+      <p>Увидим результат работы программы</p>
+      <code>Hello, world!</code>
+    </li>
+  </ol>
+</article>
+
+
+<!-- Компиляция -->
+<article class="article">
+  <div class="anchor" id="compiler3"></div>
+  <h3>Компиляция</h3>
+
+  <p>При создании исполняемого файла из текстового файла с программой на языке Си, компилятор проходит через четыре отдельных этапа. На каждом этапе создается отдельный файл</p>
+  <code>a.c -> a.i -> a.s -> a.o -> a.exe</code>
+
+  <ol>
+    <li>
+      <h4>Предварительная обработка</h4>
+      <p><strong>Препроцессор</strong> выполняет все директивы препроцессора. Например, директива #include заменяется на код из указанного файла, все константы из директивы #define заменяются на их значения. Создается новый текстовый файл уже без директив препроцессора с программой на языке Си и с расширением .i</p>
+    </li>
+    <li>
+      <h4>Трансляция</h4>
+      <p><strong>Компилятор</strong> преобразует (транслирует)программу на языке Си в программу на языке Ассемблера. Создается новый текстовый файл с программой на языке Ассемблера и с расширением .s</p>
+    </li>
+    <li>
+      <h4>Сборка</h4>
+      <p><strong>Сборщик</strong> преобразует текстовые инструкции языка Ассемблера в машинный код. Создается объектный файл в двоичном формате и с расширением .o</p>
+    </li>
+    <li>
+      <h4>Линковка</h4>
+      <p><strong>Линкер</strong> (компоновщик) связывает (линкует) все полученные двоичные объектные файлы в единый исполняемый двоичный файл с расширением .exe</p>
+    </li>
+  </ol>
+  <p>Если исходная программа содержится не в одном, а в нескольких файлах, то на каждом этапе создается отдельный файл для каждого исходного файла. На последнем этапе все файлы связываются в один исполняемый.</p>
+  <p>По умолчанию временные файлы, созданные на этапе компиляции, удаляются автоматически. Но их можно восстановить с помощью опции -save-temp</p>
+  <code>gcc a.c -save-temp</code>
 </article>
 
 
@@ -252,46 +339,6 @@
   <h3>VSCode</h3>
 
   <p><a href="https://code.visualstudio.com/">https://code.visualstudio.com/</a></p>
-</article>
-
-
-<!-- Первая программа -->
-<article class="article">
-  <div class="anchor" id="editor1"></div>
-  <h3>Первая программа</h3>
-
-  <ol>
-
-    <li>
-      <p>Создадим файл</p>
-      <code>hello.c</code>
-    </li>
-
-    <li>
-      <p>Запишем в него код первой программы</p>
-<pre>#include &lt;stdio.h&gt;
-
-int main() {
-  printf("Hello, world!");
-  return 0;
-}</pre>
-    </li>
-
-    <li>
-      <p>Откроем терминал и запустим компилятор gcc</p>
-      <code>gcc hello.c</code>
-    </li>
-
-    <li>
-      <p>По умолчанию компилятор создаст исполняемый файл <strong>a.exe</strong>. Запустим его</p>
-      <code>./a</code>
-    </li>
-
-    <li>
-      <p>Увидим результат работы программы</p>
-      <code>Hello, world!</code>
-    </li>
-  </ol>
 </article>
 
 
